valor da venda e quantidade corretas